--- a/coverpage-app/src/App.css
+++ b/coverpage-app/src/App.css
@@ -40,3 +40,71 @@
 .read-the-docs {
   color: #888;
 }
+.sidebar {
+  display: grid;
+  grid-template-rows: 1fr 3fr 1fr;
+}
+.sidebar img {
+  margin-top: 6vh;
+  border-radius: 50%;
+  align-content: center;
+  object-fit: cover;
+  padding: 5px;
+  width: 90%;
+  height: 40%;
+}
+
+.header {
+  display: flex;
+  align-items: flex-start;
+  justify-items: center;
+}
+
+.header p {
+  font-size: 1.5vw;
+}
+
+.content {
+  display: grid;
+  grid-template-rows: 1fr 6fr 1fr;
+}
+.content p {
+  font-size: 2vw;
+}
+
+.coverpage {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+}
+
+.main {
+  display: grid;
+  grid-template-rows: 1fr 3fr 3fr;
+}
+
+.educacion {
+  justify-items: center;
+  color: cadetblue;
+  display: flex;
+  flex-direction: column;
+  row-gap: 25px;
+}
+.educacion h2 {
+  align-self: center;
+  font-size: 3vw;
+  text-decoration: underline;
+}
+
+.educacion h3 {
+  align-self: center;
+  justify-self: left;
+  font-size: 2vw;
+}
+
+.educacion img {
+  justify-self: flex-end;
+  object-fit: contain;
+  border-radius: 100px;
+  width: 40vw;
+  height: 20vh;
+}
