Nueva seccion para el sidebar
Se ajusto el tamaño de las filas del grid para evitar desperdiciar espacio y se agrego una nueva seccion para redes sociales como linkedIn y github

--- a/coverpage-app/src/App.css
+++ b/coverpage-app/src/App.css
@@ -42,7 +42,7 @@
 }
 .sidebar {
   display: grid;
-  grid-template-rows: 1fr 8fr 1fr;
+  grid-template-rows: 1fr 1.5fr 6.5fr 1fr;
   background-color: darkcyan;
   border-radius: 10px 0px 0px 10px;
 }
