--- a/coverpage-app/src/App.css
+++ b/coverpage-app/src/App.css
@@ -61,6 +61,7 @@
   display: flex;
   align-items: flex-start;
   justify-items: center;
+  padding: 15px;
 }
 
 .header p {
@@ -130,4 +131,22 @@
   border-radius: 5px;
   font-size: x-large;
   height: 40px;
+}
+.icon {
+  font-size: 10vw;
+  color: lightgreen;
+}
+.network-list {
+  padding-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  list-style: none;
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  padding-inline-start: 0px;
+}
+
+.network-list li {
+  margin-bottom: 50px;
 }
