--- a/coverpage-app/src/App.css
+++ b/coverpage-app/src/App.css
@@ -1,53 +1,20 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+html {
+  overflow: auto;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
 .sidebar {
   display: grid;
-  grid-template-rows: 1fr 1.5fr 6.5fr 1fr;
+  grid-template-rows: 0.7fr 1fr 0.6fr 6fr;
   background-color: darkcyan;
   border-radius: 10px 0px 0px 10px;
 }
 .sidebar img {
-  margin-top: 6vh;
+  margin-top: 10vh;
   border-radius: 50%;
   justify-self: center;
   align-content: center;
@@ -70,7 +37,7 @@
 
 .content {
   display: grid;
-  grid-template-rows: 1fr 6fr 1fr;
+  grid-template-rows: 0.8fr 6fr 1fr;
 }
 .content p {
   font-size: 2vw;
@@ -83,7 +50,7 @@
 
 .main {
   display: grid;
-  grid-template-rows: 1fr 3fr 3fr;
+  grid-template-rows: 0.5fr 2fr 2fr;
   row-gap: 40px;
 }
 
@@ -135,7 +102,13 @@
 .icon {
   font-size: 10vw;
   color: lightgreen;
+  transition: 0.3s;
 }
+
+.icon:hover {
+  color: darkgray;
+}
+
 .network-list {
   padding-top: 10px;
   display: flex;
